feat(dreal.rb.template): add el captian

--- a/dreal.rb.template
+++ b/dreal.rb.template
@@ -7,6 +7,7 @@ class Dreal < Formula
 
 ##BOTTLE_COMMENT##  bottle do
 ##BOTTLE_COMMENT##    root_url 'https://##ORG_NAME##.github.io/homebrew-##FORMULA_NAME##'
+##BOTTLE_COMMENT##    sha1 '##BOTTLE_EL_CAPITAN_HASH##' => :el_capitan
 ##BOTTLE_COMMENT##    sha1 '##BOTTLE_YOSEMITE_HASH##' => :yosemite
 ##BOTTLE_COMMENT##    sha1 '##BOTTLE_MAVERICKS_HASH##' => :mavericks
 ##BOTTLE_COMMENT##  end
