--- a/dreal.rb.template
+++ b/dreal.rb.template
@@ -3,13 +3,12 @@ require "formula"
 class Dreal < Formula
   homepage "http://dreal.github.io"
   url "https://github.com/dreal/dreal3.git"
-  version "##VERSION##-##COMMIT_HASH##"
+  version "##SOURCE_VERSION##.##COMMIT_DATETIME##.##COMMIT_HASH##"
 
 ##BOTTLE_COMMENT##  bottle do
 ##BOTTLE_COMMENT##    root_url 'https://##ORG_NAME##.github.io/homebrew-##FORMULA_NAME##'
 ##BOTTLE_COMMENT##    sha1 '##BOTTLE_EL_CAPITAN_HASH##' => :el_capitan
 ##BOTTLE_COMMENT##    sha1 '##BOTTLE_YOSEMITE_HASH##' => :yosemite
-##BOTTLE_COMMENT##    sha1 '##BOTTLE_MAVERICKS_HASH##' => :mavericks
 ##BOTTLE_COMMENT##  end
 
   # Required
@@ -22,6 +21,8 @@ class Dreal < Formula
   depends_on 'cmake'            => :build
   depends_on 'wget'             => :build
   depends_on 'google-perftools' => :optional
+
+  needs :cxx11
 
   def install
     args = ["-DCMAKE_INSTALL_PREFIX=#{prefix}",
