feat(dreal.rb.template): use std_cmake_args

--- a/dreal.rb.template
+++ b/dreal.rb.template
@@ -25,22 +25,18 @@ class Dreal < Formula
   needs :cxx11
 
   def install
-    args = ["-DCMAKE_INSTALL_PREFIX=#{prefix}",
-            "-DCMAKE_BUILD_TYPE=Release"]
     mkdir 'build' do
       # Compile tools (Ocaml)
       if ! Dir.exists?(ENV['HOME'] + "/.opam")
           system "opam", "init", "--yes"
       end
-      # system "opam", "switch", "4.02.1"
-      # ENV['PATH'] = ENV['HOME'] + "/.opam/4.02.1/bin" + ":" + ENV['PATH']
       ENV['PATH'] = ENV['HOME'] + "/.opam/system/bin" + ":" + ENV['PATH']
       puts "PATH= " + ENV['PATH']
       system "opam", "install", "--yes", "oasis", "batteries", "ocamlfind"
       system "make", "-C", "../tools", "setup.ml", "setup.data"
       system "make", "-C", "../tools"
       # Compile dReal (C++)
-      system "cmake", "../src", *args
+      system "cmake", "../src", "-DCMAKE_CXX_COMPILER=/usr/local/bin/clang++", "-DCMAKE_C_COMPILER=/usr/local/bin/clang", *std_cmake_args
       system "make"
       system "make", "install"
     end
