fix(dreal.rb.template): use llvm38

--- a/dreal.rb.template
+++ b/dreal.rb.template
@@ -20,7 +20,7 @@ class Dreal < Formula
   depends_on 'opam'             => :build
   depends_on 'cmake'            => :build
   depends_on 'wget'             => :build
-  depends_on 'llvm'             => :build
+  depends_on 'homebrew/versions/llvm38' => :build
   depends_on 'google-perftools' => :optional
 
   needs :cxx11
@@ -28,8 +28,8 @@ class Dreal < Formula
   def install
     args = ["-DCMAKE_INSTALL_PREFIX=#{prefix}",
             "-DCMAKE_BUILD_TYPE=Release",
-            "-DCMAKE_CXX_COMPILER=/usr/local/opt/llvm/bin/clang++", 
-            "-DCMAKE_C_COMPILER=/usr/local/opt/llvm/bin/clang"]
+            "-DCMAKE_CXX_COMPILER=/usr/local/bin/clang++-3.8",
+            "-DCMAKE_C_COMPILER=/usr/local/bin/clang-3.8"]
     mkdir 'build' do
       # Compile tools (Ocaml)
       if ! Dir.exists?(ENV['HOME'] + "/.opam")
