--- a/dreal.rb.template
+++ b/dreal.rb.template
@@ -6,7 +6,7 @@ class Dreal < Formula
   version "##SOURCE_VERSION##.##COMMIT_DATETIME##.##COMMIT_HASH##"
 
 ##BOTTLE_COMMENT##  bottle do
-##BOTTLE_COMMENT##    root_url 'https://##ORG_NAME##.github.io/homebrew-##FORMULA_NAME##'
+##BOTTLE_COMMENT##    root_url 'https://dl.bintray.com/dreal/homebrew-dreal'
 ##BOTTLE_COMMENT##    sha1 '##BOTTLE_EL_CAPITAN_HASH##' => :el_capitan
 ##BOTTLE_COMMENT##    sha1 '##BOTTLE_YOSEMITE_HASH##' => :yosemite
 ##BOTTLE_COMMENT##  end
