--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,20 @@
-language: objective-c
-env:
-  matrix:
-    - BUILD_FROM_SOURCE=TRUE
-    - BUILD_FROM_SOURCE=FALSE
+language: cpp
+
+matrix:
+  include:
+    - os: osx
+      osx_image: xcode8.3
+      compiler: clang
+    - os: osx
+      osx_image: xcode9
+      compiler: clang
 
 install:
-  - brew update
-  - brew tap dreal/dreal
-  - brew install --HEAD opam
-  - opam init --yes
-  - eval `opam config env`
+  - brew install dreal/dreal/dreal --build-from-source
 
 script:
-  - if [[ $BUILD_FROM_SOURCE == TRUE ]] ; then
-        opam install ocamlfind batteries oasis
-        brew install --verbose --build-bottle dreal;
-        brew bottle dreal;
-    fi
-  - if [[ $BUILD_FROM_SOURCE == FALSE ]] ; then
-        brew install --verbose dreal;
-    fi
+  - curl -o check_sat.cc  https://raw.githubusercontent.com/dreal/dreal-bazel-example-project/master/check_sat.cc
+  - clang++ --std=c++14 check_sat.cc `pkg-config dreal --cflags --libs` && ./a.out
 
 notifications:
   email:
