--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,13 @@ sudo: required
 matrix:
   include:
     - os: osx
-      osx_image: xcode8.3
+      osx_image: xcode8
+      compiler: clang  
+    - os: osx
+      osx_image: xcode9.2
       compiler: clang
     - os: osx
-      osx_image: xcode9
+      osx_image: xcode9.3beta
       compiler: clang
 
 install:
