Minor fixes + add 'brew audit' in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ matrix:
       compiler: clang
 
 install:
+  - brew audit --strict --online --new-formula ./dreal.rb
   - rm /usr/local/include/c++ # https://github.com/Homebrew/brew/issues/1742#issuecomment-277308817
   - brew update
   - brew upgrade python
