--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ matrix:
 
 install:
   - rm /usr/local/include/c++ # https://github.com/Homebrew/brew/issues/1742#issuecomment-277308817
+  - xcode-select -p
+  - sudo xcode-select -r
   - brew update
   - brew upgrade python || true
   - brew install dreal/dreal/dreal --only-dependencies || true
