--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,10 @@ script:
   - export PKG_CONFIG_PATH=/usr/local/opt/ibex@2.6.5/share/pkgconfig:${PKG_CONFIG_PATH}
   - curl -o check_sat.cc  https://raw.githubusercontent.com/dreal/dreal-bazel-example-project/master/check_sat.cc
   - clang++ --std=c++14 check_sat.cc `pkg-config dreal --cflags --libs` && ./a.out
-  - wget https://raw.githubusercontent.com/dreal/dreal4/master/dreal/api/test/api_test.py
+  - wget https://raw.githubusercontent.com/dreal/dreal4/master/dreal/test/python/api_test.py
   - python2 api_test.py --verbose
+  - wget https://raw.githubusercontent.com/dreal/dreal4/master/dreal/test/python/solver_test.py
+  - python2 solver_test.py --verbose
   - brew test dreal
 
 notifications:
