--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ script:
   - export PKG_CONFIG_PATH=/usr/local/opt/ibex@2.6.5/share/pkgconfig:${PKG_CONFIG_PATH}
   - curl -o check_sat.cc  https://raw.githubusercontent.com/dreal/dreal-bazel-example-project/master/check_sat.cc
   - clang++ --std=c++14 check_sat.cc `pkg-config dreal --cflags --libs` && ./a.out
+  - python2 -m pip install dreal
   - wget https://raw.githubusercontent.com/dreal/dreal4/master/dreal/test/python/api_test.py
   - python2 api_test.py --verbose
   - wget https://raw.githubusercontent.com/dreal/dreal4/master/dreal/test/python/solver_test.py
