travis: Add `brew tap dreal/dreal`

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ matrix:
       compiler: clang
 
 install:
+  - brew tap dreal/dreal
   - brew update
   - brew upgrade python || true
   - brew install dreal/dreal/dreal --only-dependencies || true
