--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ matrix:
     - os: osx
       osx_image: xcode9.4
       compiler: clang
+    - os: osx
+      osx_image: xcode10.2
+      compiler: clang
 
 install:
   - brew tap dreal/dreal
