--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,8 @@ matrix:
 
 install:
   - brew tap dreal/dreal
-  - brew update && brew upgrade
+  - brew update
+  - brew upgrade || true
   - brew install dreal/dreal/dreal --only-dependencies || true
   - brew install dreal/dreal/dreal --build-from-source -v
 
