--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,8 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+  schedule:
+    - cron: '0 8 * * *'
 
 jobs:
   macos_catalina:
@@ -13,13 +15,6 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v2
-      - name: audit_formula
-      	run: brew audit --strict --online dreal/dreal/dreal
-      - name: linkage_test
-        run: brew linkage --test dreal
-      - name: setup
-        run: brew install dreal/dreal/dreal --only-dependencies
-      - name: build_from_source
-        run: brew install dreal/dreal/dreal --build-from-source -v
-      - name: test
-        run: brew test dreal
+      - name: run_script
+      	run: ./ci/script.sh
+        shell: zsh -efuo pipefail {0}
